# rustdo

./: .env.example  Cargo.toml  README.md
migrations/2022-02-25-111153_create_todos/: up.sql
src/: main.rs  schema.rs  todo.rs
